--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,19 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+}
+
+.divider {
+  height: 0.5px;
+  background-color: rgba(0, 0, 0, 0.23);
+  width: 759px;
+  margin-bottom: -10px;
+  z-index: 1000;
+}
+
+.searchHeaders {
+  color: #fff;
+  margin-top: 50px;
+  font-size: 36px;
 }
